--- a/agenda/templates/agenda/calendario.html
+++ b/agenda/templates/agenda/calendario.html
@@ -24,6 +24,7 @@
     </div>
     <div class="main">
         <div id="calendar"></div>
+        <a href="/usuarios/login/">Sair</a>
     </div>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
