alteranções no front

--- a/agenda/templates/agenda/calendario.html
+++ b/agenda/templates/agenda/calendario.html
@@ -156,7 +156,7 @@
         }
         .logout-btn {
             padding: 10px 20px;
-            background: #dc3545;
+            background: #782E31;
             color: white;
             border: none;
             border-radius: 5px;
@@ -169,4 +169,3 @@
     </style>
 </body>
 </html>
-
