--- a/procedimentos/templates/procedimentos/confirma_exclusao.html
+++ b/procedimentos/templates/procedimentos/confirma_exclusao.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Confirmar Exclusão</title>
+    <link href="{% static 'agenda/styles.css' %}" rel="stylesheet">
 </head>
 <body>
-    <h1>Você tem certeza que deseja excluir o procedimento "{{ procedimento.nome }}"?</h1>
-    <form method="POST">
-        {% csrf_token %}
-        <button type="submit">Sim, excluir</button>
-    </form>
-    <a href="{% url 'lista_procedimentos' %}">Cancelar</a> 
+    <div class="main">
+        <h1>Confirmar Exclusão</h1>
+        <p>Você tem certeza que deseja excluir o procedimento <strong>"{{ procedimento.nome }}"</strong>?</p>
+        <form method="POST">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-delete">Sim, excluir</button>
+        </form>
+        <a href="{% url 'lista_procedimentos' %}" class="btn btn-cancel">Cancelar</a>
+    </div>
 </body>
 </html>
