--- a/agenda/static/agenda/styles.css
+++ b/agenda/static/agenda/styles.css
@@ -21,7 +21,7 @@ body {
 
 .menu h3 {
     font-size: 1.5em;
-    color: #dc3545;
+    color: #782E31;
 }
 
 .menu ul {
@@ -59,7 +59,7 @@ body {
     font-size: 16px;
     color: #fff;
     text-decoration: none;
-    background-color: #dc3545; /* Cor de fundo */
+    background-color: #782E31; /* Cor de fundo */
     border-radius: 5px; /* Bordas arredondadas */
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra */
     transition: background-color 0.3s ease, transform 0.2s ease; /* Animações */
