--- a/consultas/templates/consultas/formulario.html
+++ b/consultas/templates/consultas/formulario.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% if form.instance.pk %}Editar{% else %}Criar{% endif %} Consulta</title>
+    <link rel="stylesheet" href="{% static 'consultas/style.css' %}">
 </head>
 <body>
     <h1>{% if form.instance.pk %}Editar{% else %}Criar{% endif %} Consulta</h1>
