--- a/procedimentos/templates/procedimentos/formulario.html
+++ b/procedimentos/templates/procedimentos/formulario.html
@@ -5,17 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% if form.instance.pk %}Editar{% else %}Criar{% endif %} Procedimento</title>
-    <link href="{% static 'agenda/styles.css' %}" rel="stylesheet">
+    <link href="{% static 'consultas/style.css' %}" rel="stylesheet">
 </head>
 <body>
-    <div class="main">
-        <h1>{% if form.instance.pk %}Editar{% else %}Criar{% endif %} Procedimento</h1>
-        <form method="POST" class="form">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit" class="btn btn-submit">Salvar</button>
-            <a href="{% url 'lista_procedimentos' %}" class="btn btn-cancel">Cancelar</a>
-        </form>
-    </div>
+    <h1>{% if form.instance.pk %}Editar{% else %}Criar{% endif %} Procedimento</h1>
+    <form method="POST" class="form">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="btn btn-submit">Salvar</button>
+        <a href="{% url 'lista_procedimentos' %}" class="btn btn-cancel">Cancelar</a>
+    </form>
 </body>
 </html>
