--- a/consultas/templates/consultas/confirma_exclusao.html
+++ b/consultas/templates/consultas/confirma_exclusao.html
@@ -11,7 +11,7 @@
     <div class="main">
         <div class="form-container">
             <h1>Confirmar Exclusão</h1>
-            <p>Você tem certeza que deseja excluir o procedimento <strong>"{{ procedimento.nome }}"</strong>?</p>
+            <p>Você tem certeza que deseja excluir a consulta?</p>
             <form method="POST">
                 {% csrf_token %}
                 <div class="form-actions">
