--- a/procedimentos/templates/procedimentos/confirma_exclusao.html
+++ b/procedimentos/templates/procedimentos/confirma_exclusao.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <div class="main">
-        <div class="form-container"> <!-- errado -->
+        <div class="form-container">
             <h1>Confirmar Exclusão</h1>
             <p>Você tem certeza que deseja excluir o procedimento?</p>
             <div class="form-actions">
-                {% csrf_token %}
                 <form method="POST">
+                    {% csrf_token %}
                     <button type="submit" class="btn btn-delete">Sim, excluir</button>
                     <a href="{% url 'lista_procedimentos' %}" class="btn btn-cancel">Cancelar</a>
                 </form>
